# SpeedForce

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/SpeedForce/: Greeter.hpp  add2.hpp
src/: ctests.cpp  speedforce.cpp
